--- a/bitnami/thanos/templates/receive/statefulset.yaml
+++ b/bitnami/thanos/templates/receive/statefulset.yaml
@@ -72,12 +72,12 @@ spec:
             - --http-address=0.0.0.0:10902
             - --remote-write.address=0.0.0.0:19291
             - --receive.replication-factor=1
+            - --receive.local-endpoint=${NAME}.thanos-receive{{ if .Values.receive.service.additionalHeadless }}-headless{{ end }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:10901
             - --objstore.config=$(OBJSTORE_CONFIG)
             - --tsdb.path=/var/thanos/receive
             - --label=replica="$(NAME)"
             - --label=receive="true"
             - --tsdb.retention=15d
-            - --receive.local-endpoint=127.0.0.1:10901
             - --receive.hashrings-file=/var/lib/thanos-receive/hashrings.json
             {{- if .Values.receive.extraFlags }}
             {{- .Values.receive.extraFlags | toYaml | nindent 12 }}
